# bio_data_merge

./: .gitignore  Makefile  README.md  pyproject.toml
bio_data_merge/: __init__.py  __main__.py  app.py
bio_data_merge/frontend/: __init__.py
bio_data_merge/frontend/blueprints/: index.py  interactor_search.py
bio_data_merge/frontend/static/js/: neo4j.js
bio_data_merge/frontend/templates/: base.html  index.html
bio_data_merge/frontend/templates/interactor/search/: results.html
bio_data_merge/model/database/: database.py
bio_data_merge/model/interactions/: __init__.py  interaction.py  interaction_properties.py  interactor.py
bio_data_merge/processor/: __init__.py  __main__.py  parser.py
bio_data_merge/utils/: parser.py
doc/: database-download.md  neo4j-links.txt
import-dbs/Intact/csv/: Features of IntAct Network - SARS-COV-2 unassigned.csv  IntAct Network - SARS-COV-2 edges.csv  SARS-CoV-2-nodes.csv
import-dbs/Intact/etc/: IntAct Network - CORONAVIRUS.json  IntAct Network-CORONAVIRUS.xml
import-dbs/STRING/: string_covid_data.xlsx
utils/: overlap.py
