[tool.poetry]
name = "bio-data-merge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
lxml = "^4.9.1"
xmltodict = "^0.13.0"
py2neo = "^2021.2.3"
pydantic = "^1.10.2"
tqdm = "^4.64.1"
aiofiles = "^22.1.0"
python-dotenv = "^0.21.0"
animation = "^0.0.7"
pgdumplib = "^3.1.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.46"
flask = "^2.2.2"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
